--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
